--- a/Resources/css/styles.css
+++ b/Resources/css/styles.css
@@ -57,6 +57,119 @@
     transition-duration: 0.3s;
 }
 
+.rvp-responsive-nav {
+    position: fixed;
+    top: 23px;
+    right: 38px;
+    width: 0;
+    height: 0;
+    overflow: hidden;
+    background-color: var(--white);
+    border-radius: 50%;
+    transition-duration: 0.3s;
+}
+
+.rvp-responsive-nav-enable {
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    transition-duration: 0.3s;
+}
+
+.rvp-responsive-nav-body {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition-duration: 0.2s;
+}
+
+.rvp-responsive-navlist {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.rvp-responsive-navlist a {
+    color: var(--green) !important;
+    font-family: var(--font1);
+    font-size: 1.5em;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.rvp-responsive-navlist li {
+    position: relative;
+    text-transform: uppercase;
+    max-width: max-content;
+    margin: 8px 0px !important;
+}
+
+.rvp-responsive-navlist li::after {
+    position: absolute;
+    content: '';
+    z-index: 1;
+    top: 0.35em;
+    right: 0px;
+    width: 0em;
+    height: 0.3em;
+    transition-duration: 0.3s;
+    background-color: var(--grey);
+}
+
+.rvp-responsive-navlist li:hover:after {
+    width: 1em;
+    transition-duration: 0.3s;
+}
+
+.rvp-responsive-navlist li::before {
+    position: absolute;
+    content: '';
+    z-index: 1;
+    top: 0.9em;
+    left: 0px;
+    width: 0em;
+    height: 0.3em;
+    transition-duration: 0.3s;
+    background-color: var(--grey);
+}
+
+.rvp-responsive-navlist li:hover:before {
+    width: 1em;
+    transition-duration: 0.3s;
+}
+
+.rvp-responsive-navlist a:nth-child(6) {
+    color: var(--grey) !important;
+}
+
+.close-text::after {
+    background-color: var(--green) !important;
+}
+
+.close-text::before {
+    background-color: var(--green) !important;
+}
+
+.rvp-close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: 999;
+    cursor: pointer;
+    color: var(--green) !important;
+}
+
 /* -------------------------------- Navbar css --------------------------------------------------- */
 
 /* -------------------------------- Hero css --------------------------------------------------- */
@@ -265,6 +378,12 @@
 
 
 /* -------------------------------- common -------------------------------------------------- */
+
+
+.rvp-opaque {
+    opacity: 1;
+    transition-duration: 1s;
+}
 
 @media (max-width: 992px) {
     .rvp-what-we-do {
