--- a/Resources/css/styles.css
+++ b/Resources/css/styles.css
@@ -365,20 +365,343 @@
     margin-bottom: 80px;
 }
 
+.rvp-who-row {
+    padding: 0 16px;
+}
+
+.rvp-card {
+    border-style: solid;
+    border-color: #f1f1f1;
+    border-top-color: var(--green);
+    padding: 16px 32px;
+    margin: 80px 0;
+    margin-bottom: 16px;
+}
+
+.rvp-person {
+    margin: 24px;
+    margin-top: -96px;
+}
+
+.rvp-person img {
+    width: 150px;
+    border-radius: 50%;
+}
+
+.rvp-name {
+    color: var(--grey);
+}
+
 /* -------------------------------- Who we are css --------------------------------------------------- */
 
 /* -------------------------------- Why is it worth -------------------------------------------------- */
+
+.rvp-why-is-it-worth {
+    padding: 80px 16px !important;
+    background-color: #fafafa;
+}
+
+.rvp-outer-box {
+    margin: auto;
+    margin-top: 40px;
+    width: 310px;
+    height: 300px;
+    overflow: hidden;
+    padding: 0 0px;
+}
+
+.rvp-virtue-head {
+    color: var(--green);
+    font-family: var(--font4);
+}
+
+.rvp-virtue-p {
+    color: var(--grey);
+    font-family: var(--font2);
+}
+
+.rvp-inner-box {
+    width: 600px;
+    height: 300px;
+    display: flex;
+    transition-duration: 0.5s;
+}
+
+.box-1,
+.box-3 {
+    z-index: 999;
+    background-color: #fafafa;
+    padding: 0px 16px;
+    width: 300px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-2,
+.box-4 {
+    background-color: #fafafa;
+    padding: 0px 16px;
+    width: 300px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-set-1 {
+    animation: scroll-top;
+    -moz-animation: scroll-top;
+    animation-duration: 20s;
+    -moz-animation-duration: 20s;
+    animation-timing-function: ease-in-out;
+    -moz-animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    -moz-animation-iteration-count: infinite;
+}
+
+@keyframes scroll-top {
+    0% {
+        margin-top: 0;
+    }
+
+    20% {
+        margin-top: 0;
+    }
+
+    25% {
+        margin-top: -300px;
+    }
+
+    70% {
+        margin-top: -300px;
+    }
+
+    75% {
+        margin-top: 0%;
+    }
+
+    100% {
+        margin-top: 0%;
+    }
+
+}
+
+@-moz-keyframes scroll-top {
+    0% {
+        margin-top: 0%;
+    }
+
+    20% {
+        margin-top: 0%;
+    }
+
+    25% {
+        margin-top: -300px;
+    }
+
+    70% {
+        margin-top: -300px;
+    }
+
+    75% {
+        margin-top: 0%;
+    }
+
+    100% {
+        margin-top: 0%;
+    }
+}
+
+.box-set-3 {
+    animation: scroll-left;
+    -moz-animation: scroll-left;
+    animation-duration: 20s;
+    -moz-animation-duration: 20s;
+    animation-timing-function: ease-in-out;
+    -moz-animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    -moz-animation-iteration-count: infinite;
+}
+
+@keyframes scroll-left {
+    0% {
+        margin-left: 0%;
+    }
+
+    45% {
+        margin-left: 0%;
+    }
+
+    50% {
+        margin-left: -300px;
+    }
+
+    95% {
+        margin-left: -300px;
+    }
+
+    100% {
+        margin-left: 0%;
+    }
+
+}
+
+@-moz-keyframes scroll-left {
+    0% {
+        margin-left: 0%;
+    }
+
+    45% {
+        margin-left: 0%;
+    }
+
+    50% {
+        margin-left: -300px;
+    }
+
+    95% {
+        margin-left: -300px;
+    }
+
+    100% {
+        margin-left: 0%;
+    }
+}
+
+.box-set-4 {
+    animation: scroll-right;
+    -moz-animation: scroll-right;
+    animation-duration: 20s;
+    -moz-animation-duration: 20s;
+    animation-timing-function: ease-in-out;
+    -moz-animation-timing-function: ease-in-out;
+    animation-iteration-count: infinite;
+    -moz-animation-iteration-count: infinite;
+}
+
+@keyframes scroll-right {
+    0% {
+        margin-left: -300px;
+    }
+
+    45% {
+        margin-left: -300px;
+    }
+
+    50% {
+        margin-left: 0px;
+    }
+
+    95% {
+        margin-left: 0px;
+    }
+
+    100% {
+        margin-left: -300px;
+    }
+
+}
+
+@-moz-keyframes scroll-right {
+    0% {
+        margin-left: -300px;
+    }
+
+    45% {
+        margin-left: -300px;
+    }
+
+    50% {
+        margin-left: 0px;
+    }
+
+    95% {
+        margin-left: 0px;
+    }
+
+    100% {
+        margin-left: -300px;
+    }
+}
 
 /* -------------------------------- Why is it worth -------------------------------------------------- */
 
 
 /* -------------------------------- Footer -------------------------------------------------- */
+
+.rvp-footer {
+    background-color: var(--green);
+    padding: 40px 16px;
+}
+
+.rvp-foot-logo {
+    font-family: var(--font1);
+    color: var(--white);
+    font-size: 4em;
+    letter-spacing: 0.5em;
+    margin: 0;
+}
+
+.rvp-foot-list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.rvp-foot-list a {
+    font-size: 1.2em;
+    color: var(--white) !important;
+    font-family: var(--font2);
+    margin: 0 5px;
+    transition-duration: 0.5s;
+}
+
+.rvp-foot-list a:hover {
+    color: var(--grey) !important;
+    transition-duration: 0.5s;
+}
+
+.rvp-foot-list li {
+    display: inline;
+}
+
+.rvp-copyright {
+    color: var(--white);
+    font-family: var(--font3);
+    margin: 0;
+}
+
+@media (max-width: 992px) {
+    .rvp-foot-logo {
+        padding-left: 0.5em;
+    }
+
+    .rvp-foot-list {
+        margin-bottom: 16px;
+    }
+}
+
+@media (max-width: 400px) {
+    .rvp-foot-logo {
+        padding-left: 0.2em;
+        margin: 24px 0;
+    }
+
+    .rvp-foot-list {
+        margin: 16px;
+    }
+
+    .rvp-copyright {
+        margin: 16px 16px;
+    }
+}
 
 /* -------------------------------- Footer -------------------------------------------------- */
 
 
 /* -------------------------------- common -------------------------------------------------- */
-
 
 .rvp-opaque {
     opacity: 1;
@@ -396,6 +719,10 @@
 
     .rvp-who-we-are {
         padding: 40px 0px;
+    }
+
+    .rvp-why-is-it-worth {
+        padding: 40px 16px !important;
     }
 
     .rvp-p {
